--- a/style.css
+++ b/style.css
@@ -4,23 +4,28 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0f0f0;
+    background-color: #2f2f2f;
     margin: 0;
     flex-direction: column;
+    background-image: url('assets/images/background/background.jpg');
+    background-size: cover;
+    transform-origin: center center;
+    overflow: hidden; /* 禁止页面滚动 */
 }
 
 .card-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
-    margin-bottom: 30px;
-    width: 400px;
+    gap: 2vw;
+    max-height: 80vw;
+    max-width: 80vw;
+    overflow: hidden;
 }
 
 .card {
-    width: 120px;
-    height: 168px;
+    width: 20vw;
+    height: 28vw;
     position: relative;
     transform-style: preserve-3d;
     transition: transform 0.6s;
