--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    border-radius: 10px;
+    border-radius: 2%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,13 +54,13 @@ body {
 }
 
 .card-front {
-    background-color: #4CAF50;
+    background-color: #252525;
     color: white;
     transform: rotateY(0deg);
 }
 
 .card-back {
-    background-color: #2196F3;
+    background-color: #252525;
     color: white;
     transform: rotateY(180deg);
 }
@@ -73,7 +73,9 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 3px;
+    border-radius: 2%;
+    user-select: none;
+    pointer-events: none;
 }
 
 .message {
