--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ button {
     flex: 1;
     padding: 15px 25px;
     font-weight: bold;
-    font-family: 'Kards文字复合字体Bold', sans-serif;
+    font-family: sans-serif;
     font-size: 20px;
     letter-spacing: 1px;
     background: linear-gradient(rgba(255,255,255,0.1), rgba(0,0,0,0.1));
@@ -35,7 +35,7 @@ button:hover {
     filter: brightness(1.1);
 }
 
-button.save-btn {
+button.countinue-btn {
     background: linear-gradient(#676f52, #848f68);
 }
 
