--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     background-image: url('assets/images/background/background.jpg');
     background-size: cover;
     transform-origin: center center;
+    overflow: hidden;
 }
 
 button {
